<resources>

    <!--Generic-->
    <string name="app_name">GoTuks</string>
    <string name="banner_ad_unit_id">/112035882/GoMetroTuks</string>
    <string name="ime_done">DONE</string>
    <string name="got_it">GOT IT</string>

    <!--Fragment Welcome-->
    <string name="txtvFWHeading">GoTuks</string>
    <string name="txtvFWParagraphHeading">Welcome!</string>
    <string name="txtvFWParagraph">Start viewing real-time \n information on bus locations</string>
    <string name="btnFWLogin">SIGN IN</string>
    <string name="btnFWCreateAccount">CREATE ACCOUNT</string>

    <!--Fragment Sign In-->
    <string name="txtvFSHeading">SIGN IN</string>
    <string name="txtvFSForgotPasswordHeading">FORGOT PASSWORD</string>
    <string name="txtvFSDescForgotPassword">Enter the email address that you signed\nup with and we\'ll send you a link to\nchange your password.</string>
    <string name="txtvFSDescCreateAccount">DONT\'T HAVE AN ACCOUNT?</string>
    <string name="txtvFSCreateAccount"><u>CREATE ACCOUNT</u></string>
    <string name="btnFSSignin">SIGN IN</string>
    <string name="btnFSResetPassword">RESET PASSWORD</string>
    <string name="cbFSStaySingedIn">Stay Signed In</string>
    <string name="txtvFSForgotPassword"><u>Forgot Password</u></string>
    <string name="txtvFSDescPassword"><b>PASSWORD</b></string>
    <string name="etxtFSHintPassword">Enter Password</string>
    <string name="txtvFSDescEmail"><b>EMAIL ADDRESS</b></string>
    <string name="etxtFSHintEmail">Enter Email Address</string>

    <!--Fragment Create Account-->
    <string name="txtvFCAHeading">CREATE ACCOUNT</string>
    <string name="btnFCASignup">SIGN UP</string>
    <string name="txtvFCADescPassword"><b>PASSWORD</b></string>
    <string name="etxtFCAHintPassword">Enter Password</string>
    <string name="txtvFCADescEmail"><b>STUDENT EMAIL ADDRESS</b></string>
    <string name="etxtFCAHintEmail">Enter Student Email Address</string>
    <string name="txtvFCADescPhone">PHONE NUMBER</string>
    <string name="etxtFCAHintPhone">Enter Phone Number</string>
    <string name="txtvFCADescFullName">FULL NAME</string>
    <string name="etxtFCAHintFullName">Enter Full Name</string>
    <string name="txtvFSDescSignIn">ALREADY HAVE AN ACCOUNT?</string>
    <string name="txtvFCASignIn"><u>SIGN IN</u></string>

    <!--Nav Bar-->
    <string name="navBarActivity">Report</string>
    <string name="navBarMap">Map</string>
    <string name="navBarProfile">Profile</string>

    <!--Fragment Profile-->
    <string name="txtvFPHeading">Profile</string>
    <string name="etxtFPHintFullName">Enter Full Name</string>
    <string name="etxtFPHintPhone">Enter Phone Number</string>
    <string name="etxtFPHintEmail">Enter Email</string>
    <string name="etxtFPHintPassword">Enter Password</string>
    <string name="etxtFPHintAddress">Enter Address</string>
    <string name="btnFPSignout">SIGN OUT</string>

    <!--Diag Fragment Anncouncements-->
    <string name="txtvNoAnnouncements">No Announcements at this time</string>

    <!--Fragment Report Facility-->
    <string name="txtvFRFHeading">Report a problem</string>
    <string name="txtvFRFTitleDescription">DESCRIPTION</string>
    <string name="etxtFRFHintDescription">Describe what the problem is</string>
    <string name="txtvFRFTitlePhoto">PHOTO</string>
    <string name="txtvFRFAddPhoto"><u>add photo</u></string>
    <string name="txtvFRFTitleLocation">LOCATION</string>
    <string name="txtvFRFLocation"><u>Select Location</u></string>
    <string name="btnFRFSendReport">SEND REPORT</string>

</resources>
