<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_blurred">

    <ProgressBar
        android:id="@+id/pbFRFProgressCircle"
        android:indeterminate="true"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="-60dp"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progress_circle"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txtvFRFHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginLeft="16dp"
        android:textSize="30sp"
        android:textColor="@color/FSBrightWhite"
        android:text="@string/txtvFRFHeading"/>

    <RelativeLayout
        android:id="@+id/relLayFRFDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtvFRFHeading"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/FSBrightWhite">

        <TextView
            android:id="@+id/txtvFRFTitleDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/txtvFRFTitleDescription"/>

        <EditText
            android:id="@+id/etxtFRFDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:gravity="top|left"
            android:layout_below="@id/txtvFRFTitleDescription"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:textSize="14sp"
            android:inputType="textMultiLine"
            android:textColor="@color/selector_text_black_diabled_dark_grey"
            android:lines="5"
            android:imeOptions="actionDone"
            android:imeActionLabel="@string/ime_done"
            android:hint="@string/etxtFRFHintDescription"/>

        <View
            android:id="@+id/vFRFDivider1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/gradient_center_opacity_grey"
            android:layout_below="@id/etxtFRFDescription"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relLayFRFPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relLayFRFDescription"
        android:background="@color/FSBrightWhite">

        <ImageView
            android:id="@+id/imgvFRFPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_camera_black"/>

        <TextView
            android:id="@+id/txtvFRFTitlePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@null"
            android:layout_toRightOf="@id/imgvFRFPhoto"
            android:layout_marginLeft="15dp"
            android:paddingLeft="0dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:enabled="false"
            android:maxLength="10"
            android:hint="@string/txtvFRFTitlePhoto"/>

        <TextView
            android:id="@+id/txtvFRFAddPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="20dp"
            android:layout_toRightOf="@id/imgvFRFPhoto"
            android:layout_below="@id/imgvFRFPhoto"
            android:clickable="true"
            android:text="@string/txtvFRFAddPhoto"/>

        <ImageView
            android:id="@+id/imgvFRFPhotoPreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="35dp"
            android:layout_centerVertical="true"/>

        <View
            android:id="@+id/vFRFDivider2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/gradient_center_opacity_grey"
            android:layout_below="@id/txtvFRFAddPhoto"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relLayFRFLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relLayFRFPhoto"
        android:background="@color/FSBrightWhite">

        <ImageView
            android:id="@+id/imgvFRFLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="35dp"
            android:src="@drawable/ic_location_black"/>

        <TextView
            android:id="@+id/txtvFRFTitleLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/imgvFRFLocation"
            android:textStyle="bold"
            android:text="@string/txtvFRFTitleLocation"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:id="@+id/txtvFRFLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:background="@null"
            android:layout_toRightOf="@id/imgvFRFLocation"
            android:layout_below="@id/txtvFRFTitleLocation"
            android:paddingTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="20dp"
            android:textSize="14sp"
            android:enabled="false"
            android:maxEms="13"
            android:textColor="@color/selector_text_black_diabled_dark_grey"
            android:hint="@string/txtvFRFLocation"/>

        <View
            android:id="@+id/vFRFDivider3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/gradient_center_opacity_grey"
            android:layout_below="@id/txtvFRFLocation"/>

    </RelativeLayout>



    <Button
        android:id="@+id/btnFRFSendReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relLayFRFLocation"
        android:padding="10dp"
        android:background="@color/NavBarBlue"
        android:textSize="20sp"
        android:textColor="@color/FSBrightWhite"
        android:text="@string/btnFRFSendReport"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnFRFSendReport"
        android:layout_alignParentBottom="true"
        android:background="@color/FSBrightWhite"
        android:id="@+id/view" />

</RelativeLayout>